# gomoku-robot

./: CLAUDE.md  README.md  pyproject.toml
docs/: 01-需求分析.md  02-技术方案.md  03-实施计划.md  04-仿真环境搭建指南.md  04-实施计划.md
gomoku_robot/: config.py  main.py
gomoku_robot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gomoku_robot/calibration/: calibrate_board.py  calibrate_robot.py  transforms.py
gomoku_robot/engine/: ai_player.py  gomoku_engine.py  patterns.py
gomoku_robot/manipulation/: deploy_policy.py  record_demos.py  train_policy.py
gomoku_robot/tests/: test_engine.py
gomoku_robot/vision/: board_detector.py
scripts/: create_gomoku_scene.py  play_gomoku_sim.py  setup_sim.sh  test_gomoku_sim.py  test_sim.py
